[package]
name = "autd3-capi-link-remote-twincat"
version = "37.0.0-alpha.3"
authors = ["shun suzuki <suzuki@hapis.k.u-tokyo.ac.jp>"]
edition = "2024"
license = "MIT"
repository = "https://github.com/shinolab/autd3-capi-link-remote-twincat"

[lib]
crate-type = ["cdylib"]

[dependencies]
autd3capi-driver = { git = "https://github.com/shinolab/autd3-capi.git", version = "37.0.0-alpha.3", default-features = false }
autd3-link-twincat = { version = "37.0.0-alpha.3", features = ["remote"], default-features = false }
